--- a/client/components/dropdown/style.scss
+++ b/client/components/dropdown/style.scss
@@ -1,4 +1,4 @@
-:root {
+/*:root {
   --bg: #242526;
   --bg-accent: #484a4d;
   --text-color: #dadce1;
@@ -43,7 +43,7 @@ ul {
   }
 }
 
-/* Icon Button */
+/* Icon Button 
 .icon-button {
   --button-size: calc(var(--nav-size) * 0.5);
   width: var(--button-size);
@@ -67,10 +67,10 @@ ul {
     height: 20px;
 
   }
-}
+} 
 
 /* Dropdown Menu */
-dropdown {
+/*dropdown {
 
   .menu-item {
     height: 50px;
@@ -85,8 +85,70 @@ dropdown {
     }
   }
 }
+*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-//dropdown
+.modal-wrapper{
+  background: #887575;
+  width: 80%;
+  max-width: 800px;
+  margin: 2rem auto;
+  position: relative;
+  top:6em;
+  text-align: left;
+}
+
+.modal-header{
+  background: #2c2c2c;
+  color: #e9e9e9e9;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-header span{
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.modal-content {
+  padding: 1.2rem 1rem;
+}
+
+.modal-body {
+  margin-bottom: 1rem;
+
+  h5{
+    font-size: 1.2rem;
+    color: coral;
+  }
+
+  p{
+    font-size: .8em;
+    background: #eee;
+    color: #333;
+    padding: 1rem;
+    margin: 1rem 0 2rem 0;
+  }
+}
+
+.modal-footer button {
+  display: block;
+  font-size: 1rem;
+  margin-left: auto;
+  padding: 0.5rem 1.8rem;
+  background: coral;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: point;
+}
+
 .dropdown{
   
   .menu-item{
@@ -118,4 +180,77 @@ dropdown {
       }
     }
 
+}
+
+.modal_delete{
+  position: fixed;
+  z-index: 1004;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, .5);
+  #delete_content{
+    position: relative;
+    color: #000;
+    height: 12em;
+    z-index:100;
+    background-color: #d2d2d2;
+    margin: 0;
+    top:50%;
+    left: 50%;
+    width:90%;
+    transform: translate(-50%, -50%);
+
+    #delete_head{
+      height: 3em;
+      color: azure;
+      background: #0b1213;
+    span#delete_title{
+      text-align: left;
+      position: relative;
+      font-size: 1.4em;
+      font-weight: bold;
+      padding: .5em 1em;
+      float: left;
+
+    }
+    span.close{
+      top: 0;
+      font-weight: bold;
+      font-size: 1.8em;
+      padding: 0.2em 1em;
+      float: right;
+
+      &:hover{
+        cursor: pointer;
+      }
+    }
+  }
+    h3{
+      background-color: #d2d2d2;
+      font-weight: 100;
+      font-size: 1.4em;
+    }
+
+    #delete_btn{
+
+      #left, #right{
+        background: #887575;
+        height: 20px;
+        width: 5em;
+        position: relative;
+        margin: .5em 1.5em;
+        font-size: 1.3em;
+        &:hover{
+          cursor: pointer;
+        }
+      }
+      #right {
+
+      }
+    }
+
+  }
 }
