I modify the server page  I modify the server page

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -314,6 +314,7 @@ header {
             margin-left: 1em
           }
           -webkit-user-select: none;
+          user-select: none;
         }
         &::after{
           content: 'upload';
